--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 <p th:text="'Hello, ' + ${name} + '!'" />
+
+<ul>
+    <li><a href="/ajax/info.html">ajax</a> </li>
+</ul>
 </body>
 </html>
